# deep-research

./: .env.sample  README.md  deep-research-config.toml  main.py  pyproject.toml
.github/workflows/: publish.yml
deep-research/: config.py  planner.py  task_splitter.py
prompts/: README.md  coordinator_prompt.md  planner_system_instructions.md  subagent_prompt.md  synthesis_prompt.md  task_splitter_instructions.md
research/: config.py  coordinator.py  memory.py  models.py  planner.py  prompts.py  researcher.py  task_splitter.py  telemetry.py
