[project]
name = "deep-research"
version = "0.1.0"
description = "a multi-agent deep research framework that uses smallagents to handle different subtasks."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
    "smolagents[mcp]>=1.24.0",
    "textual>=8.1.1",
    "textual-dev>=1.8.0",
    "tomli-w>=1.2.0",
]
